tests/suites/0_stateless/02_ddl/02_0001_autoincrement.result
>>>> 
create or replace table test_autoincrement (c1 int, c2 string autoincrement);

Error: APIError: QueryFailed: [1065]AUTO INCREMENT only supports Decimal or Numeric (e.g. INT32) types
<<<<
>>>> 
create or replace table test_autoincrement (c1 int, c2 int default 1 autoincrement);

Error: APIError: QueryFailed: [1005]error: 
  --> SQL:1:83
  |
1 | create or replace table test_autoincrement (c1 int, c2 int default 1 autoincrement)
  | ------                                                                            ^ DEFAULT and AUTOINCREMENT cannot exist at the same time
  | |                                                                                  
  | while parsing `CREATE [OR REPLACE] TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


<<<<
>>>> 
create or replace table test_autoincrement (c1 int, c2 int autoincrement, c3 float autoincrement, c4 int identity (1,2), c5 int autoincrement start 1 increment 2, c6 decimal(20, 2) autoincrement);

>>>> 
insert into test_autoincrement (c1) values(0), (0), (0);

3
>>>> select * from test_autoincrement;
0      0       0       1       1       0.00
0      1       1       2       2       1.00
0      2       2       3       3       2.00
<<<<
>>>> 
alter table test_autoincrement add column c4 string autoincrement;

Error: APIError: QueryFailed: [1065]AUTO INCREMENT only supports Decimal or Numeric (e.g. INT32) types
<<<<
>>>> 
alter table test_autoincrement add column c4 int default autoincrement;

Error: APIError: QueryFailed: [1065]error: 
  --> SQL:1:58
  |
1 | alter table test_autoincrement add column c4 int default autoincrement
  |                                                          ^^^^^^^^^^^^^ column autoincrement doesn't exist


<<<<
>>>> 
alter table test_autoincrement add column c7 int autoincrement;

>>>> 
insert into test_autoincrement (c1) values(0);

1
>>>> select * from test_autoincrement;
0       0       0       1       1       0.00    NULL
0       1       1       2       2       1.00    NULL
0       2       2       3       3       2.00    NULL
0       1       1       3       3       1.00    0
<<<<
>>>> 
alter table test_autoincrement drop column c2;

>>>> select * from test_autoincrement;
0       0       1       1       0.00    NULL
0       1       2       2       1.00    NULL
0       2       3       3       2.00    NULL
0       1       3       3       1.00    0
<<<<
>>>> 
drop table test_autoincrement;

>>>> drop database test
